@@ -1647,7 +1647,7 @@ static void _slurm_rpc_reconfigure_controller(slurm_msg_t * msg)
 static void _slurm_rpc_shutdown_controller(slurm_msg_t * msg)
 {
 	int error_code = SLURM_SUCCESS, i;
-	uint16_t core_arg = 0;
+	uint16_t options = 0;
 	shutdown_msg_t *shutdown_msg = (shutdown_msg_t *) msg->data;
 	uid_t uid = g_slurm_auth_get_uid(msg->auth_cred, NULL);
 	/* Locks: Read node */
@@ -1666,17 +1666,19 @@ static void _slurm_rpc_shutdown_controller(slurm_msg_t * msg)
 		slurmctld_config.resume_backup = true;	
 	} else {
 		info("Performing RPC: REQUEST_SHUTDOWN");
-		core_arg = shutdown_msg->core;
+		options = shutdown_msg->options;
 	}
 
 	/* do RPC call */
-	if (error_code);
-	else if (core_arg)
+	if (error_code)
+		;
+	else if (options == 1)
 		info("performing immeditate shutdown without state save");
 	else if (slurmctld_config.shutdown_time)
 		debug2("shutdown RPC issued when already in progress");
 	else {
-		if (msg->msg_type == REQUEST_SHUTDOWN) {
+		if ((msg->msg_type == REQUEST_SHUTDOWN) &&
+		    (options == 0)) {
 			/* This means (msg->msg_type != REQUEST_CONTROL) */
 			lock_slurmctld(node_read_lock);
 			msg_to_slurmd(REQUEST_SHUTDOWN);
@@ -1708,7 +1710,7 @@ static void _slurm_rpc_shutdown_controller(slurm_msg_t * msg)
 	
 	
 	slurm_send_rc_msg(msg, error_code);
-	if ((error_code == SLURM_SUCCESS) && core_arg &&
+	if ((error_code == SLURM_SUCCESS) && (options == 1) &&
 	    (slurmctld_config.thread_id_sig))
 		pthread_kill(slurmctld_config.thread_id_sig, SIGABRT);
 }
